force-app/main/default/objects/Member__c/fields/Current_Benchmark__c.field-meta.xml
<CustomField>
    <fullName>Current_Benchmark__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Benchmark</label>
    <referenceTo>Benchmark__c</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>Members</relationshipName>
    <type>Lookup</type>
</CustomField>