force-app/main/default/objects/Member__c/fields/Deadlift__c.field-meta.xml
<CustomField>
    <fullName>Deadlift__c</fullName>
    <label>Deadlift</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>