force-app/main/default/objects/Member__c/fields/Fitness_Level__c.field-meta.xml
<CustomField>
    <fullName>Fitness_Level__c</fullName>
    <label>Fitness Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fitness_Level</valueSetName>
    </valueSet>
</CustomField>