force-app/main/default/objects/Member__c/fields/Goal_Benchmark__c.field-meta.xml
<CustomField>
    <fullName>Goal_Benchmark__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Goal Benchmark</label>
    <referenceTo>Benchmark__c</referenceTo>
    <relationshipLabel>Members (Goal Benchmark)</relationshipLabel>
    <relationshipName>Members1</relationshipName>
    <type>Lookup</type>
</CustomField>