force-app/main/default/objects/Member__c/fields/Height_Inches__c.field-meta.xml
<CustomField>
    <fullName>Height_Inches__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Height (Inches)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>