force-app/main/default/objects/Member__c/fields/Knee_Issues__c.field-meta.xml
<CustomField>
    <fullName>Knee_Issues__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this member have a knee issue</description>
    <label>Knee Issues</label>
    <type>Checkbox</type>
</CustomField>