force-app/main/default/objects/Member__c/fields/Premium_User__c.field-meta.xml
<CustomField>
    <fullName>Premium_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Premium User</label>
    <type>Checkbox</type>
</CustomField>