force-app/main/default/objects/Member__c/fields/Shoulder_Issues__c.field-meta.xml
<CustomField>
    <fullName>Shoulder_Issues__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this member have a shoulder Issue</description>
    <label>Shoulder Issues</label>
    <type>Checkbox</type>
</CustomField>