force-app/main/default/objects/Member__c/fields/Shoulder_Press__c.field-meta.xml
<CustomField>
    <fullName>Shoulder_Press__c</fullName>
    <label>Shoulder Press</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>