force-app/main/default/objects/Member__c/fields/Training_Class__c.field-meta.xml
<CustomField>
    <fullName>Training_Class__c</fullName>
    <label>Training Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Training_Class</valueSetName>
    </valueSet>
</CustomField>