force-app/main/default/objects/Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fitness_Level__c</columns>
    <columns>Training_Class__c</columns>
    <columns>Issues__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>